--- a/css/style.css
+++ b/css/style.css
@@ -375,7 +375,7 @@ nav {
     background: url(../images/css.png) center no-repeat ;
 }
 #skill_icon4{
-    background: url(../images/js.png) center  no-repeat ;
+    background: url(../images/js1.png) center  no-repeat ;
 }
 .skill_name {
 	text-align: center;
